<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

  <com.google.android.material.textfield.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/session_type">

    <AutoCompleteTextView
        android:id="@+id/new_session_kind_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="12dp"
      android:hint="@string/session_name">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/new_session_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1" />
  </com.google.android.material.textfield.TextInputLayout>

  <CheckBox
      android:id="@+id/new_session_open_desktop"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="12dp"
      android:checked="true"
      android:text="@string/open_same_session_on_pc" />

  <CheckBox
      android:id="@+id/new_session_admin"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/powershell_admin" />

</LinearLayout>
